# igcheck

./: .env.example  .gitignore  AGENTS.md  README.md  igcheck.sh  pyproject.toml
igcheck/: __init__.py  cli.py  instagram.py  output.py
